--- a/PROJECTS/project1.html
+++ b/PROJECTS/project1.html
@@ -770,8 +770,8 @@
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="30" width="40" >&nbsp;</td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
@@ -788,8 +788,8 @@
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="30" width="40" >&nbsp;</td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
@@ -804,10 +804,10 @@
                 <table border="1"cellpadding="3" cellspacing="1">
                     <tr>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="30" width="40">&nbsp;</td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
@@ -822,10 +822,10 @@
                 <table border="1"cellpadding="3" cellspacing="1">
                     <tr>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                         <td height="30" width="40">&nbsp;</td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./Black-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./black-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
@@ -843,7 +843,7 @@
                         <td height="20" width="20"><img src="./white-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
@@ -858,10 +858,10 @@
                 <table border="1"cellpadding="3" cellspacing="1">
                     <tr>
                         <td height="30" width="40">&nbsp;</td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
                         <td height="20" width="20"><img src="./black-ball.jpg"></td>
-                        <td height="20" width="20"><img src="./White-ball.jpg"></td>
+                        <td height="20" width="20"><img src="./white-ball.jpg"></td>
                     </tr>
     </table>
                     </td>
